--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -90,9 +90,9 @@
     {% endif %}
 
     <!-- Button to open search modal -->
-    {% if "material-next/search" in config.plugins or "material/search" in config.plugins %}
-      {% if "material-next/search" in config.plugins %}
-        {% set search = config.plugins["material-next/search"] | attr("config") %}
+    {% if "materialx/search" in config.plugins or "material/search" in config.plugins %}
+      {% if "materialx/search" in config.plugins %}
+        {% set search = config.plugins["materialx/search"] | attr("config") %}
       {% else %}
         {% set search = config.plugins["material/search"] | attr("config") %}
       {% endif %}
