--- a/src/templates/assets/stylesheets/main/_typeset.scss
+++ b/src/templates/assets/stylesheets/main/_typeset.scss
@@ -166,7 +166,7 @@ kbd {
   // Text link
   a {
     color: var(--md-typeset-a-color);
-    text-decoration: underline;
+    // text-decoration: underline;
     word-break: break-word;
 
     // Also enable color transition on pseudo elements
