--- a/src/templates/assets/stylesheets/main/components/_top.scss
+++ b/src/templates/assets/stylesheets/main/components/_top.scss
@@ -34,7 +34,7 @@
   padding: px2rem(8px) px2rem(16px) px2rem(8px) px2rem(12px);
   margin-inline-start: 50%;
   font-size: px2rem(14px);
-  color: var(--md-default-fg-color--light);
+  color: var(--md-accent-fg-color);   // var(--md-default-fg-color)
   cursor: pointer;
   background-color: var(--md-default-bg-color--light);
   backdrop-filter: blur(px2rem(8px));
