--- a/src/templates/assets/stylesheets/palette/_scheme.scss
+++ b/src/templates/assets/stylesheets/palette/_scheme.scss
@@ -97,23 +97,39 @@
     // Shadow depth 1
     --md-shadow-z1:
       0 #{px2rem(4px)} #{px2rem(10px)} hsla(0, 0%, 0%, 0.05),
-      0 0              #{px2rem(1px)}  hsla(0, 0%, 0%, 0.1);
+      0 0              #{px2rem(1px)}  hsla(0, 0%, 100%, 0.1);
 
     // Shadow depth 2
     --md-shadow-z2:
       0 #{px2rem(4px)} #{px2rem(10px)} hsla(0, 0%, 0%, 0.25),
-      0 0              #{px2rem(1px)}  hsla(0, 0%, 0%, 0.25);
+      0 0              #{px2rem(1px)}  hsla(0, 0%, 100%, 0.35);
 
     // Shadow depth 3
     --md-shadow-z3:
-      0 #{px2rem(4px)} #{px2rem(10px)} hsla(0, 0%, 0%, 0.4),
-      0 0              #{px2rem(1px)}  hsla(0, 0%, 0%, 0.35);
+      0 #{px2rem(10px)} #{px2rem(40px)} hsla(0, 0%, 0%, 0.4),
+      0 0               #{px2rem(1px)}  hsla(0, 0%, 0%, 0.35);
+
+    // Headline colors
+    :is(h1, h2, h3, h4, h5, h6) {
+      color: hsla(var(--md-hue), 0%, 100%, 1);
+    }
+
+    // Header title
+    .md-header__title {
+      color: hsla(var(--md-hue), 0%, 100%, 1);
+    }
 
     // Hide images for light mode
     img[src$="#only-light"],
     img[src$="#gh-light-mode-only"] {
       display: none;
     }
+
+    // Search
+    --color-foreground: 255 255 255;
+    --color-background: 22 23 26;
+    --color-background-subtle: 33 34 38;
+    --color-backdrop: 11 12 15;
   }
 
   // --------------------------------------------------------------------------
