--- a/src/templates/partials/copyright.html
+++ b/src/templates/partials/copyright.html
@@ -33,7 +33,7 @@
       href="https://jaywhj.github.io/mkdocs-materialx/"
       target="_blank" rel="noopener"
     >
-      Material for MkDocs
+      MaterialX for MkDocs
     </a>
   {% endif %}
 </div>
