--- a/material/templates/partials/copyright.html
+++ b/material/templates/partials/copyright.html
@@ -9,8 +9,8 @@
   {% endif %}
   {% if not config.extra.generator == false %}
     Made with
-    <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
-      Material for MkDocs
+    <a href="https://jaywhj.github.io/mkdocs-materialx/" target="_blank" rel="noopener">
+      MaterialX for MkDocs
     </a>
   {% endif %}
 </div>
