--- a/material/templates/partials/source-file.html
+++ b/material/templates/partials/source-file.html
@@ -1,14 +1,15 @@
 {#-
   This file was automatically generated - do not edit
 -#}
+{#-
 {% macro render_updated(date) %}
-  <span>
+  <span class="dd-item">
     <span class="material-icons" data-icon="doc_updated" title="{{ lang.t('source.file.date.updated') }}"></span>
     <time datetime="{{ date }}" title="{{ date[:19].replace('T', ' ') }}"></time>
   </span>
 {% endmacro %}
 {% macro render_created(date) %}
-  <span>
+  <span class="dd-item">
     <span class="material-icons" data-icon="doc_created" title="{{ lang.t('source.file.date.created') }}"></span>
     <time datetime="{{ date }}" title="{{ date[:19].replace('T', ' ') }}"></time>
   </span>
@@ -16,12 +17,11 @@
 {% macro render_authors(authors) %}
   {%- set icon = 'doc_author' if authors|length == 1 else 'doc_authors' %}
   <span class="material-icons" data-icon="{{ icon }}" title="{{ lang.t('source.file.contributors') }}"></span>
-  {#- Render authors (avatar mode) #}
-  <div class="avatar-group">
+  <div class="author-group">
     {%- for author in authors %}
     <div class="avatar-wrapper" data-name="{{ author.name }}" title="{{ author.name }}">
       <span class="avatar-text"></span>
-      <img class="avatar" src="{{ author.avatar }}" onerror='this.style.display="none"'>
+      <img class="avatar" data-src="{{ author.avatar }}" data-email="{{ author.email }}">
     </div>
     {%- endfor %}
   </div>
@@ -78,10 +78,24 @@
     {% set page_authors = page.meta.document_dates_authors %}
   {% endif %}
 {% endif %}
-{% if updated or created or git_info or committers %}
-  <div class="document-dates-plugin">
-    {% if committers %}
-      {{ render_committers(committers) }}
-    {% endif %}
+<div class="document-dates-plugin">
+  <div class="dd-left">
+  {%- if created %}
+    {{ render_created(created) }}
+  {%- endif %}
+  {%- if updated %}
+    {{ render_updated(updated) }}
+  {%- endif %}
   </div>
-{% endif %}
+  {%- if page_authors %}
+  <div class="dd-right">
+    {{ render_authors(page_authors) }}
+  </div>
+  {%- endif %}
+</div>
+{%- if committers %}
+<aside class="md-source-file">
+  {{ render_committers(committers) }}
+</aside>
+{%- endif %}
+-#}
