--- a/src/templates/assets/stylesheets/main/components/_sidebar.scss
+++ b/src/templates/assets/stylesheets/main/components/_sidebar.scss
@@ -261,28 +261,20 @@
   // Drawer overlay
   .md-overlay {
     position: fixed;
-    top: 0;
+    inset: 0;
     z-index: 5;
-    width: 0;
-    height: 0;
     background-color: var(--md-default-bg-color--light);
     backdrop-filter: blur(px2rem(4px));
+    -webkit-backdrop-filter: blur(px2rem(4px));
     opacity: 0;
-    transition:
-      width     0ms 200ms,
-      height    0ms 200ms,
-      opacity   200ms;
+    pointer-events: none;
+    transition: opacity 200ms;
 
     // Show overlay when drawer is active
     [data-md-toggle="drawer"]:checked ~ &[for="__drawer"],
     [data-md-toggle="toc"]:checked ~ &[for="__toc"] {
-      width: 100%;
-      height: 100%;
       opacity: 1;
-      transition:
-        width     0ms,
-        height    0ms,
-        opacity 200ms;
+      pointer-events: auto;
     }
   }
 }
