Adjust color for quote border line

--- a/src/templates/assets/stylesheets/main/_typeset.scss
+++ b/src/templates/assets/stylesheets/main/_typeset.scss
@@ -340,8 +340,9 @@ kbd {
   blockquote {
     padding-inline-start: px2rem(12px);
     margin-inline: 0;
+    font-size: 0.7rem;
     color: var(--md-default-fg-color--light);
-    border-inline-start: px2rem(4px) solid var(--md-default-fg-color--lighter);
+    border-inline-start: px2rem(4px) solid var(--md-default-fg-color--quote);
   }
 
   // Unordered list
