--- a/src/templates/assets/stylesheets/main/_colors.scss
+++ b/src/templates/assets/stylesheets/main/_colors.scss
@@ -79,6 +79,9 @@
   --md-default-bg-color--lighter:      hsla(0, 0%, 100%, 0.3);
   --md-default-bg-color--lightest:     hsla(0, 0%, 100%, 0.12);
 
+  // Quote border line color
+  --md-default-fg-color--quote:        hsla(0, 0%, 0%, 0.2);
+
   // Code color shades
   --md-code-fg-color:                  hsla(200, 18%, 26%, 1);
   --md-code-bg-color:                  hsla(200, 0%, 96%, 1);
