--- a/src/templates/assets/stylesheets/palette/_scheme.scss
+++ b/src/templates/assets/stylesheets/palette/_scheme.scss
@@ -43,6 +43,9 @@
     --md-default-bg-color--lighter:    hsla(var(--md-hue), 15%, 14%, 0.26);
     --md-default-bg-color--lightest:   hsla(var(--md-hue), 15%, 14%, 0.07);
 
+    // Quote border line color
+    --md-default-fg-color--quote:      hsla(var(--md-hue), 15%, 90%, 0.2);
+
     // Code color shades
     --md-code-fg-color:                hsla(var(--md-hue), 18%, 86%, 0.82);
     --md-code-bg-color:                hsla(var(--md-hue), 15%, 18%, 1);
