Fixing actor-line color for sequence

--- a/src/templates/assets/javascripts/components/content/mermaid/index.css
+++ b/src/templates/assets/javascripts/components/content/mermaid/index.css
@@ -320,7 +320,7 @@ text.actor > tspan {
 }
 
 /* Sequence actor line */
-line {
+.actor-line {
   stroke: var(--md-mermaid-sequence-actor-line-color);
 }
 
