--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -60,7 +60,7 @@
   {% endif %}
 
   <!-- Navigation list -->
-  <ul class="md-nav__list" data-md-scrollfix>
+  <ul class="md-nav__list">
     {% for nav_item in nav.items %}
       {% set path = "__nav_" ~ loop.index %}
       {{ item.render(nav_item, path, 1) }}
