--- a/src/templates/partials/nav-item.html
+++ b/src/templates/partials/nav-item.html
@@ -243,7 +243,7 @@
             <span class="md-nav__icon md-icon"></span>
             {{ render_title(nav_item) }}
           </label>
-          <ul class="md-nav__list" data-md-scrollfix>
+          <ul class="md-nav__list">
 
             <!-- Nested navigation item -->
             {% for item in nav_item.children %}
