--- a/src/templates/partials/top.html
+++ b/src/templates/partials/top.html
@@ -48,17 +48,24 @@
 
     <!-- Show table of contents -->
     {% if "toc.integrate" not in features and page.toc %}
-      {% set hidden = "" %}
-      {% if page.meta and page.meta.hide and "toc" in page.meta.hide %}
-        {% set hidden = "hidden" %}
+      {% set toc = page.toc %}
+      {% set first = toc | first %}
+      {% if first and first.level == 1 %}
+        {% set toc = first.children %}
       {% endif %}
-      <label
-        class="md-top__button md-top__side md-top__side--toc"
-        for="__toc"
-        {{ hidden }}
-      >
-        {% include ".icons/material/dock-right.svg" %}
-      </label>
+      {% if toc %}
+        {% set hidden = "" %}
+        {% if page.meta and page.meta.hide and "toc" in page.meta.hide %}
+          {% set hidden = "hidden" %}
+        {% endif %}
+        <label
+          class="md-top__button md-top__side md-top__side--toc"
+          for="__toc"
+          {{ hidden }}
+        >
+          {% include ".icons/material/dock-right.svg" %}
+        </label>
+      {% endif %}
     {% endif %}
 
   </div>
