--- a/material/templates/partials/header.html
+++ b/material/templates/partials/header.html
@@ -53,7 +53,7 @@
       {% endif %}
       {% if search.enabled %}
         <label class="md-header__button md-icon" for="__search">
-          {% set icon = config.theme.icon.search or "material/magnify" %}
+          {% set icon = config.theme.icon.search or "octicons/search-24" %}
           {% include ".icons/" ~ icon ~ ".svg" %}
         </label>
         {% include "partials/search.html" %}
