--- a/material/templates/partials/toc.html
+++ b/material/templates/partials/toc.html
@@ -16,7 +16,7 @@
       <span class="md-nav__icon md-icon"></span>
       {{ title }}
     </label>
-    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+    <ul class="md-nav__list" data-md-component="toc">
       {% for toc_item in toc %}
         {% include "partials/toc-item.html" %}
       {% endfor %}
