--- a/material/templates/partials/search.html
+++ b/material/templates/partials/search.html
@@ -7,7 +7,7 @@
     <form class="md-search__form" name="search">
       <input type="text" class="md-search__input" name="query" aria-label="{{ lang.t('search.placeholder') }}" placeholder="{{ lang.t('search.placeholder') }}" autocapitalize="off" autocorrect="off" autocomplete="off" spellcheck="false" data-md-component="search-query" required>
       <label class="md-search__icon md-icon" for="__search">
-        {% set icon = config.theme.icon.search or "material/magnify" %}
+        {% set icon = config.theme.icon.search or "octicons/search-24" %}
         {% include ".icons/" ~ icon ~ ".svg" %}
         {% set icon = config.theme.icon.previous or "material/arrow-left" %}
         {% include ".icons/" ~ icon ~ ".svg" %}
@@ -15,7 +15,7 @@
       <nav class="md-search__options" aria-label="{{ lang.t('search') }}">
         {% if "search.share" in features %}
           <a href="javascript:void(0)" class="md-search__icon md-icon" title="{{ lang.t('search.share') }}" aria-label="{{ lang.t('search.share') }}" data-clipboard data-clipboard-text="" data-md-component="search-share" tabindex="-1">
-            {% set icon = config.theme.icon.share or "material/share-variant" %}
+            {% set icon = config.theme.icon.share or "octicons/share-android-24" %}
             {% include ".icons/" ~ icon ~ ".svg" %}
           </a>
         {% endif %}
@@ -29,7 +29,7 @@
       {% endif %}
     </form>
     <div class="md-search__output">
-      <div class="md-search__scrollwrap" tabindex="0" data-md-scrollfix>
+      <div class="md-search__scrollwrap" tabindex="0">
         <div class="md-search-result" data-md-component="search-result">
           <div class="md-search-result__meta">
             {{ lang.t("search.result.initializer") }}
